# notes

./: README.md
docker/01_swarm/: Dockerfile  app.py  commands.sh  docker-compose.yml  pyproject.toml
git/: commands1.sh
javascript/: 001_sol.js  002_sol.js
python/01_celery_task/: README.md  main.py  requirements.txt  run_celery.sh
