[tool.poetry]
name = "javarush-project"
version = "0.1.0"
description = ""
authors = ["Your Name <your_name@example.com>"]
readme = "README.md"
packages = [{include = "javarush_project"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
